Update GitHub users and repositories list

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,9 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - Brennen-Hill
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - Brennen-Hill/pattern-matching-for-quantum-circuit-optimization
+  - Brennen-Hill/BadgerVision
+  - https://github.com/Brennen-Hill/ThunderWarrior
