--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Brennen
 middle_name: A.
 last_name: Hill
-contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Description placeholder
-footer_text: >
-  Footer placeholder
+# contact_note: >
+#   You can even add a little note about which of these is the best way to reach you.
+# description: > # the ">" symbol means to ignore newlines until "footer_text:"
+#   Description placeholder
+# footer_text: >
+#   Footer placeholder
 keywords: Brennen Hill, Brennen A. Hill, Brennen Alexander Hill, Researcher, Neuroscience, AI, NeuroAI, Machine Learning, Reinforcement Learning, World Models, Neuromorphic Computing, Engineer # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
