--- a/_config.yml
+++ b/_config.yml
@@ -241,7 +241,7 @@ display_categories: ["external-services"] # these categories will be displayed o
 
 scholar:
   last_name: [Hill]
-  first_name: [Brennen, A.]
+  first_name: [Brennen A.]
 
   style: apa
   locale: en
