--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -51,6 +51,6 @@ scholar_userid: E7N2fXkAAAAJ # your Google Scholar ID
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
 custom_social: # can be any name here other than the ones already defined above
-  logo: assets/img/1.jpg # can be png, svg, jpg
+  logo: assets/img/lab_icon.png # can be png, svg, jpg
   title: WNC Lab
   url: https://neuromorphic.cs.wisc.edu/people
