--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -50,7 +50,8 @@ scholar_userid: E7N2fXkAAAAJ # your Google Scholar ID
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
-custom_social: # can be any name here other than the ones already defined above
-  logo: assets/img/lab_icon.png # can be png, svg, jpg
-  title: WNC Lab
-  url: https://neuromorphic.cs.wisc.edu/people
+lab_url: https://neuromorphic.cs.wisc.edu/people
+# custom_social: # can be any name here other than the ones already defined above
+#   logo: assets/img/lab_icon.png # can be png, svg, jpg
+#   title: WNC Lab
+#   url: https://neuromorphic.cs.wisc.edu/people
