--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,6 +76,7 @@ jobs:
         with:
           ruby-version: "3.3.5"
           bundler-cache: true
+          version: 2
       - name: Setup Python 🐍
         uses: actions/setup-python@v5
         with:
