--- a/_config.yml
+++ b/_config.yml
@@ -120,13 +120,9 @@ newsletter:
 # -----------------------------------------------------------------------------
 
 collections:
-  books:
-    output: true
-  news:
-    defaults:
-      layout: post
-    output: true
   projects:
+    output: true
+  pages:
     output: true
 
 # -----------------------------------------------------------------------------
